--- a/Dockerfile.capsule
+++ b/Dockerfile.capsule
@@ -1,4 +1,3 @@
-# FROM nvidia/cuda:12.4.0-devel-ubuntu22.04
 # sha256:af8bd179ed3bf69d4b63b19a763662a6141f0f62ef099283f68d0b14b4bab0e3
 FROM nvidia/cuda:12.4.0-runtime-ubuntu22.04
 
@@ -15,6 +14,7 @@ RUN apt-get update && apt-get install -y \
     ca-certificates \
     libssl3 \
     curl \
+    libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /workspace
